--- a/styles.css
+++ b/styles.css
@@ -4,37 +4,50 @@ body {
     background-color: #1e1e1e;
     color: #ffffff;
 }
+
 h1 {
     margin: 0;
 }
+
+h2 {
+    margin-top: 0;
+}
+
 .table-container {
     position: relative;
     overflow: auto;
     border: 1px solid #333;
     background-color: #2c2c2c;
     margin-top: 20px;
-    max-height: calc(100vh - 60px - 50px - 50px - 30px); /* Ajustez ces valeurs si nécessaire */
+    max-height: calc(100vh - 60px - 50px - 50px - 30px);
 }
+
 table {
     width: 100%;
     border-collapse: collapse;
 }
-th, td {
+
+th,
+td {
     padding: 10px;
     text-align: center;
     min-width: 50px;
     position: relative;
 }
+
 th {
     background-color: #333;
     color: #fff;
 }
+
 th.player-header {
     background-color: transparent;
 }
+
 td {
     background-color: #2c2c2c;
 }
+
 .input-cell {
     width: 100%;
     background-color: transparent;
@@ -42,14 +55,17 @@ td {
     border: none;
     text-align: center;
 }
+
 .input-cell:focus {
     outline: none;
     border-bottom: 1px solid #ffffff;
 }
+
 .input-cell::placeholder {
     color: #ffffff;
     opacity: 0.7;
 }
+
 button {
     margin-top: 10px;
     padding: 10px;
@@ -58,54 +74,98 @@ button {
     cursor: pointer;
     border-radius: 4px;
 }
-.add-player-btn, .add-round-btn, .new-game-btn, .add-btn, .load-btn {
+
+.small-button {
+    padding: 5px;
+}
+
+.add-player-btn,
+.add-round-btn,
+.new-game-btn,
+.ok-btn,
+.load-btn {
     background-color: #45a049;
 }
-.add-player-btn:hover, .add-round-btn:hover, .new-game-btn:hover, .add-btn:hover, .load-btn:hover {
+
+.add-player-btn:hover,
+.add-round-btn:hover,
+.new-game-btn:hover,
+.ok-btn:hover,
+.load-btn:hover {
     background-color: #45a049;
 }
+
 .toggle-score-btn {
     background-color: #f39c12;
 }
+
 .toggle-score-btn:hover {
     background-color: #e67e22;
 }
-.end-game-btn, .cancel-btn, .delete-btn {
+
+.end-game-btn,
+.cancel-btn,
+.delete-btn {
     background-color: #e74c3c;
 }
-.end-game-btn:hover, .cancel-btn:hover, .delete-btn:hover {
+
+.end-game-btn:hover,
+.cancel-btn:hover,
+.delete-btn:hover {
     background-color: #c0392b;
 }
-.options-btn, .game-list-btn {
+
+.options-btn,
+.game-list-btn {
     background-color: #3498db;
 }
-.options-btn:hover, .game-list-btn:hover {
+
+.options-btn:hover,
+.game-list-btn:hover {
     background-color: #2980b9;
 }
-.load-btn, .delete-btn {
+
+.delete-ico {
+    color: #e74c3c;
+}
+
+.delete-ico:hover {
+    color: #c0392b;
+}
+
+.load-btn,
+.delete-btn {
     margin-top: 0;
+}
+
+.add-newplayer-btn {
+    margin: 0 0 10px 0;
 }
 
 .best-score {
     font-weight: bold;
     color: #e74c3c;
 }
+
 .invalid-score {
     font-weight: bold;
     color: orange;
 }
+
 .fixed-header {
     position: sticky;
     top: 0;
     background-color: #2c2c2c;
     z-index: 1;
 }
+
 .fixed-footer {
     position: sticky;
     bottom: 0;
     background-color: #2c2c2c;
     z-index: 1;
 }
+
 .modal {
     display: none;
     position: fixed;
@@ -116,8 +176,9 @@ button {
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* Assure que la popin est au-dessus des autres éléments */
+    z-index: 1000;
 }
+
 .modal-content {
     background-color: #2c2c2c;
     border: 1px solid #333;
@@ -126,7 +187,9 @@ button {
     width: 300px;
     text-align: center;
 }
-.modal-content input[type="text"], .modal-content input[type="number"] {
+
+.modal-content input[type="text"],
+.modal-content input[type="number"] {
     width: calc(100% - 20px);
     padding: 10px;
     border: 1px solid #333;
@@ -135,11 +198,19 @@ button {
     background-color: #1e1e1e;
     color: #ffffff;
 }
+
+.modal-content-body {
+    max-height: calc(80vh - 50px - 45px);
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 .color-picker {
     overflow-x: auto;
     white-space: nowrap;
     padding: 10px 0;
 }
+
 .color-picker div {
     min-width: 25px;
     height: 25px;
@@ -148,23 +219,23 @@ button {
     border: 2px solid transparent;
     display: inline-block;
 }
+
 .color-picker div.selected {
     border-color: #fff;
 }
-.ranking-modal-content {
-    max-height: 50vh;
-    overflow-y: auto;
-}
+
 .ranking-list {
     list-style: none;
-    padding: 0;
+    padding: 8px 10px 0 10px;
     margin: 0;
 }
+
 .ranking-list li {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
 }
+
 .ranking-list .rank {
     width: 25px;
     height: 25px;
@@ -175,15 +246,21 @@ button {
     margin-right: 10px;
     color: #ffffff;
     font-weight: bold;
-    background-color: #3498db; /* Couleur par défaut */
 }
+
+.rank-text {
+    position: relative;
+}
+
 .ranking-list .player-name {
     flex: 1;
 }
+
 .ranking-list .player-score {
     width: 50px;
     text-align: right;
 }
+
 .options-table td {
     text-align: left;
     width: 50%;
@@ -198,11 +275,11 @@ button {
 }
 
 .home-buttons button {
-    font-size: 1.5em;  /* Augmente la taille du texte */
-    padding: 15px 30px;  /* Augmente le padding pour agrandir le bouton */
-    border-radius: 8px;  /* Arrondit les coins */
+    font-size: 1.5em;
+    padding: 15px 30px;
+    border-radius: 8px;
     width: 100%;
-    max-width: 300px;  /* Pour limiter la largeur */
+    max-width: 300px;
 }
 
 .actions-td {
@@ -261,11 +338,47 @@ footer {
 }
 
 .nav-item:hover {
-    color: #e74c3c; /* Couleur de survol */
+    color: #e74c3c;
 }
 
 .games-table-container {
-    max-height: calc(100vh - 60px - 40px - 25px);;
+    max-height: calc(100vh - 60px - 40px - 25px);
     overflow-y: auto;
     margin-top: 5px;
+}
+
+.error-message {
+    color: #e74c3c;
+    margin-top: 5px;
+}
+
+.player-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    cursor: pointer;
+    justify-content: space-between;
+}
+
+.player-item.selected {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.color-circle {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.selectable-user {
+    display: flex;
+    width: 100%;
+}
+
+.crown-icon {
+    color: gold;
+    position: absolute;
+    left: 13px;
+    transform: translateY(-80%) rotate(30deg);
 }
