--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,8 @@ td {
     color: #ffffff;
     border: none;
     text-align: center;
+    position: relative;
+    right: 1.8px;
 }
 
 .input-cell:focus {
